[gd_scene load_steps=5 format=2]

[ext_resource path="res://GodotFPS-Assets/Font/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GodotFPS-Assets/UI/UI_Square.png" type="Texture" id=2]
[ext_resource path="res://UI/UI.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BarraDeVida" type="TextureProgress" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = -119.0
margin_right = 338.0
margin_bottom = -74.0
value = 40.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 0.329412, 0.231373, 0.231373, 1 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true

[node name="MunicionTexto" type="Label" parent="."]
margin_left = 44.0
margin_top = 447.0
margin_right = 136.0
margin_bottom = 476.0
custom_fonts/font = SubResource( 1 )
text = "AMMO: "

[node name="ScoreTexto" type="Label" parent="."]
margin_left = 41.0
margin_top = 410.0
margin_right = 133.0
margin_bottom = 439.0
custom_fonts/font = SubResource( 1 )
text = "SCORE: "
